# leonardo-project

./: .gitignore  Cargo.toml  LICENSE  README.md
leonardo-api/: Cargo.toml
leonardo-api/src/: data.rs  dedup.rs  error.rs  main.rs
leonardo-bot/: Cargo.toml  bot.py
leonardo-logger/: Cargo.toml
src/: error.rs  main.rs
