[package]
name = "leonardo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"]}
axum = "*"
tracing = "*"
tracing-subscriber = "*"
reqwest = "*"
anyhow = "*"
scraper = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
derivative = "*"