[package]
name = "leonardo"
version = "0.1.0"
edition = "2021"
default-run = "leonardo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"]}
axum = "0.6"
axum-server = { version = "*", features = ["tls-rustls"]}
axum-server-dual-protocol = "*"
tracing = "*"
tracing-subscriber = "*"
reqwest = "*"
anyhow = "*"
scraper = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
derivative = "*"